Dispatch `CollectionsExt` methods to places easier to find:
* For some methods used in only one place, move the method close to where it is used.
* For some methods with an API clear enough, move to the public `Containers` class.
* For some methods of little values, replace by calls to more widely used methods.